Improved Test cases and added DataInitializer to pre-populate database with some translations