@@ -9,38 +9,39 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TranslationServiceImpl implements TranslationService {
 
-    private final TranslationRepository repository;
+    private final TranslationRepository translationRepository;
 
     public TranslationDTO saveTranslation(TranslationDTO dto) {
         Translation translation = TranslationMapper.toEntity(dto);
-        Translation savedTranslation = repository.save(translation);
+        Translation savedTranslation = translationRepository.save(translation);
         return TranslationMapper.toDTO(savedTranslation);
     }
 
     public List<TranslationDTO> searchByKey(String key) {
-        return repository.findByKeyContainingIgnoreCase(key)
+        return translationRepository.findByKeyContainingIgnoreCase(key)
                 .stream()
                 .map(TranslationMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<TranslationDTO> searchByLocale(String locale) {
-        return repository.findByLocale(locale)
+        return translationRepository.findByLocale(locale)
                 .stream()
                 .map(TranslationMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<TranslationDTO> searchByTag(String tag) {
-        return repository.findByTagsContaining(tag)
+        return translationRepository.findByTagsContaining(tag)
                 .stream()
                 .map(TranslationMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
