@@ -3,7 +3,7 @@ package com.digitaltolk.translation;
 import com.digitaltolk.translation.dto.TranslationDTO;
 import com.digitaltolk.translation.entity.Translation;
 import com.digitaltolk.translation.repository.TranslationRepository;
-import com.digitaltolk.translation.service.TranslationService;
+import com.digitaltolk.translation.service.impl.TranslationServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -13,10 +13,9 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-
-import static org.hamcrest.CoreMatchers.any;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -24,14 +23,14 @@ import static org.mockito.Mockito.*;
 public class TranslationServiceTest {
 
     @Mock
-    private TranslationRepository repository;
+    private TranslationRepository translationRepository;
 
     @InjectMocks
-    private TranslationService service;
+    private TranslationServiceImpl service;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        MockitoAnnotations.openMocks(TranslationServiceTest.class);
     }
 
     @Test
@@ -42,10 +41,10 @@ public class TranslationServiceTest {
         translation.setLocale("en");
         translation.setContent("Hello");
 
-        when(repository.save(ArgumentMatchers.<Translation>any())).thenReturn(translation);
+        when(translationRepository.save(ArgumentMatchers.<Translation>any())).thenReturn(translation);
 
         // Act
-        Translation savedTranslation = repository.save(new Translation());
+        Translation savedTranslation = translationRepository.save(new Translation());
 
         // Assert
         assertNotNull(savedTranslation);
@@ -55,19 +54,17 @@ public class TranslationServiceTest {
     @Test
     void testSearchByKey() {
         Translation translation = new Translation(1L, "hello", "en", "Hello", Set.of("greeting"), null, null);
-        when(repository.findByKeyContainingIgnoreCase("hello")).thenReturn(List.of(translation));
-
+        when(translationRepository.findByKeyContainingIgnoreCase("hello")).thenReturn(Arrays.asList(translation));
         List<TranslationDTO> result = service.searchByKey("hello");
-
         assertFalse(result.isEmpty());
         assertEquals(1, result.size());
-        assertEquals("hello", result.get(0).key());
+        assertEquals("hello", result.getFirst().key());
     }
 
     @Test
     void testSearchByLocale() {
         Translation translation = new Translation(1L, "hello", "fr", "Bonjour", Set.of("greeting"), null, null);
-        when(repository.findByLocale("fr")).thenReturn(List.of(translation));
+        when(translationRepository.findByLocale("fr")).thenReturn(List.of(translation));
 
         List<TranslationDTO> result = service.searchByLocale("fr");
 
@@ -75,5 +72,17 @@ public class TranslationServiceTest {
         assertEquals(1, result.size());
         assertEquals("fr", result.get(0).locale());
  }
+
+    @Test
+    void testSearchByTag() {
+        Translation translation = new Translation(1L, "hello", "en", "Hello", Set.of("greeting"), null, null);
+        when(translationRepository.findByTagsContaining("greeting")).thenReturn(List.of(translation));
+
+        List<TranslationDTO> result = service.searchByTag("greeting");
+
+        assertFalse(result.isEmpty());
+        assertEquals(1, result.size());
+        assertEquals("greeting", result.getFirst().tags().stream().toList().getFirst());
+    }
 
 }
